Stop using the Spawner when you don't need interrupt(). CygPath has been hanging when the underlying utility failed. Bug 156315 is once case of this.