@@ -16,7 +16,6 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 
-import org.eclipse.cdt.utils.spawner.ProcessFactory;
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.Path;
 import org.eclipse.core.runtime.Platform;
@@ -33,7 +32,7 @@ public class CygPath {
 			// Don't run this on non-windows platforms
 			throw new IOException("Not Windows"); //$NON-NLS-1$
 		String[] args = {command, "--windows", "--file", "-"}; //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-		cygpath = ProcessFactory.getFactory().exec(args);
+		cygpath = Runtime.getRuntime().exec(args);
 		stdin = new BufferedWriter(new OutputStreamWriter(cygpath.getOutputStream()));
 		stdout = new BufferedReader(new InputStreamReader(cygpath.getInputStream()));
 		try {
@@ -81,7 +80,7 @@ public class CygPath {
 		Process cygPath = null;
 		BufferedReader reader = null;
 		try {
-			cygPath = ProcessFactory.getFactory().exec(new String[]{"cygpath", "-w", path}); //$NON-NLS-1$ //$NON-NLS-2$
+			cygPath = Runtime.getRuntime().exec(new String[]{"cygpath", "-w", path}); //$NON-NLS-1$ //$NON-NLS-2$
 			reader = new BufferedReader(new InputStreamReader(cygPath.getInputStream()));
 			String newPath = reader.readLine();
 			IPath ipath;
